--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^16.10.2",
-    "typescript": "^4.4.3",    
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@mikro-orm/cli": "^4.5.9",
+    "@mikro-orm/core": "^4.5.9",
+    "@mikro-orm/migrations": "^4.5.9",
+    "@mikro-orm/postgresql": "^4.5.9",
+    "pg": "^8.7.1"
   }
 }
