--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.10.2",
     "nodemon": "^2.0.13",
     "typescript": "^4.4.3"
@@ -21,13 +22,17 @@
     "@mikro-orm/core": "^4.5.9",
     "@mikro-orm/migrations": "^4.5.9",
     "@mikro-orm/postgresql": "^4.5.9",
-    "pg": "^8.7.1"
+    "apollo-server-express": "^3.3.0",
+    "express": "^4.17.1",
+    "graphql": "^15.6.0",
+    "pg": "^8.7.1",
+    "type-graphql": "^1.1.1"
   },
-    "mikro-orm": {
-      "useTsNode": true,
-      "configPaths": [
-        "./src/mikro-orm.config.ts",
-        "./dist/mikro-orm.config.js"
-      ]
-    }
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
+  }
 }
