--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@types/connect-redis": "^0.0.17",
     "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.4",
+    "@types/express-session": "1.17.0",
     "@types/node": "^16.10.2",
     "@types/redis": "^2.8.32",
     "nodemon": "^2.0.13",
@@ -30,7 +30,7 @@
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
+    "express-session": "1.17.1",
     "graphql": "^15.6.0",
     "pg": "^8.7.1",
     "redis": "^3.1.2",
